# music-seeker

./: .env.example  .gitignore  Dockerfile  README.md  SPOTIFY_USAGE.md  auth.py  docker-compose.yml  downloader.py  entrypoint.sh  favorites.py  jobs.py  lastfm.py  library.py  main.py  migrate_to_user_folders.sh  player.py  podcasts.py  radio.py  recognize.py  requirements.txt  search_providers.py  settings.py  slskd.yml.example  spotify.py
.github/workflows/: build-desktop.yml
app/: __init__.py  background.py  config.py  dependencies.py  models.py
app/routers/: admin.py  auth.py  bpm.py  discover.py  dlna.py  downloads.py  favorites.py  library.py  player.py  podcasts.py  search.py  settings.py  spotify.py
app/services/: auth.py  bpm.py  dlna.py  downloader.py  favorites.py  jobs.py  library.py  player.py  radio.py  recognize.py  search_providers.py  settings.py  spotify.py
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: api-reference.md  architecture.md  configuration.md  native-apps.md  onkyo-eiscp.md  setup-guides.md
static/: index.html
static/css/: base.css  cards.css  downloads.css  login.css  modal.css  nav.css  pages.css  player.css  responsive.css  search.css  settings.css  variables.css
static/js/: api.js  app.js  auth.js  bpm.js  discover.js  djmix.js  downloads.js  favorites.js  fullplayer.js  gestures.js  library.js  player.js  player_v2.js  player_v3.js  podcasts.js  prefetch.js  queue.js  radio.js  recognize.js  recommendations.js  router.js  search.js  settings.js  (+3 more)
